LeadConversionFlowPackage/force-app/main/default/objects/Lead/fields/SFChallenge__c.field-meta.xml
<CustomField>
    <fullName>SFChallenge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SFChallenge</label>
    <type>Checkbox</type>
</CustomField>