LeadConversionFlowPackage/force-app/main/default/objects/Lead/fields/SFPremium__c.field-meta.xml
<CustomField>
    <fullName>SFPremium__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SFPremium</label>
    <type>Checkbox</type>
</CustomField>